# Hand_Detection

./: CMakeLists.txt  README.md  detection.cpp  segmentation.cpp
data/: detector.txt  negativeDescriptorsKMeans.csv  positiveDescriptorsKMeans.csv
lib/: HOG.cpp  HOG.h  ImgOps.cpp  ImgOps.h  Metrics.cpp  Metrics.h  PreProcessing.cpp  PreProcessing.h  RectClustering.cpp  RectClustering.h  SvmOps.cpp  SvmOps.h  Utility.cpp  Utility.h  detectionKmeans.cpp  detectionKmeans.h
